# Frotz2

./: .gitignore  .replit  IGNORE_model-id-refs.txt  README.md  TODO.md  app_state.json  debug_log.txt  devtools.py  edit.py  fetch.py  last_turn_debug.txt  llm_contracts.py  llm_interface.py  lore.txt  main.py  main_devtools.py  pyproject.toml  sitecustomize.py  system_prompts.py  world_manager.py
.agents/: agent_assets_metadata.toml
.edit_backups/: LLM_TOOLS.md.20260522-183029.bak  LLM_TOOLS.md.20260522-184440.bak  LLM_TOOLS.md.20260523-031056.bak  TODO.md.20260522-173305.bak  TODO.md.20260522-183029.bak  TODO.md.20260522-184425.bak  TODO.md.20260522-235803.bak  TODO.md.20260523-031033.bak  TODO.md.20260523-031041.bak  TODO.md.20260523-042438.bak  index.html.20260522-190117.bak  index.html.20260522-192950.bak  index.html.20260522-194425.bak  index.html.20260522-194906.bak  index.html.20260523-030904.bak  index.html.20260523-042337.bak  llm_contracts.py.20260522-175120.bak  llm_contracts.py.20260522-183751.bak  llm_contracts.py.20260522-235816.bak  llm_contracts.py.20260523-013802.bak  llm_contracts.py.20260523-020030.bak  llm_interface.py.20260522-194830.bak  llm_interface.py.20260522-211543.bak  llm_interface.py.20260522-235846.bak  llm_interface.py.20260523-000304.bak  llm_interface.py.20260523-040206.bak  llm_interface.py.20260523-040912.bak  main.py.20260522-173305.bak  main.py.20260522-185840.bak  main.py.20260522-192933.bak  main.py.20260522-194408.bak  main.py.20260522-194841.bak  main.py.20260522-194854.bak  main.py.20260522-213338.bak  (+80 more)
backups/: README.md  (+6 more)
(+46 files in other folders)
